--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+
+
+
+
+/* create-react-app styles */
+
 .App {
   text-align: center;
 }
@@ -32,6 +38,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
